add the youku vedio for sf event

--- a/event02/index.html
+++ b/event02/index.html
@@ -239,8 +239,8 @@ font-family: '微软雅黑', 'Helvetica Neue', Helvetica, Arial, sans-serif;
 letter-spacing: -1px;
 line-height: 50px;">
                             <div class="alignright size-full wp-image-7">
-                               <iframe width="480" height="302" src="http://www.ustream.tv/embed/13449663?v=3&amp;wmode=direct" scrolling="no" frameborder="0" style="border: 0px none transparent;">    </iframe>
-<br /><a href="http://www.ustream.tv/" style="padding: 2px 0px 4px; width: 400px; background: #ffffff; display: block; color: #000000; font-weight: normal; font-size: 10px; text-decoration: underline; text-align: center;" target="_blank">Live streaming by Ustream</a>
+                              <iframe height=350 width=480 frameborder=0 src="http://player.youku.com/embed/XNTE5ODcwMjY4" allowfullscreen></iframe>
+<br />
                             </div>
                         “重新定义中国科技创业”
 </div>
